--- a/css/style.css
+++ b/css/style.css
@@ -1854,3 +1854,15 @@ form label {
   -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
 }
+
+.custom-image {
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
+}
+
+.custom-container {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 20px;
+}
